# Simple-math-calculator-and-plotter

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: build.yml
src/: main.cpp  renderer.cpp  renderer.h
src/math/: constants.h  constants_registry.cpp  constants_registry.h  evaluator.cpp  evaluator.h  expression.cpp  expression.h  functions.cpp  functions.h  geometry.h  numerical.cpp  numerical.h  parser.cpp  parser.h  result.h  solver.cpp  solver.h  tokenizer.cpp  tokenizer.h
tests/: test_math.cpp
